[tool.poetry]
name = "langgraphexps"
version = "0.1.0"
description = ""
authors = ["Joe Stubbs <joestubbs5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.37"
langsmith = "^0.1.135"
langchain-anthropic = "^0.2.3"
ipython = "^8.28.0"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.2"
langchain-groq = "^0.2.0"
neo4j = "^5.26.0"
chromadb = "^0.5.20"
pysqlite3-binary = "^0.5.4"
click = "^8.1.7"
textdistance = "^4.6.3"
chromadbx = "^0.0.6"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
